--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,6 +13,8 @@
     }
 
     .mainheader {
+      margin-top: 10vh;
+
       img {
         border-radius: 5px;
 
