--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,12 +6,16 @@
   background: @nav-bg;
   border-bottom: 2px solid @nav-border;
   width: 100%;
+  position: fixed;
+  top: 0;
+  opacity: 0.9;
 
   h1 {
     font-family: 'Russo One', sans-serif;
     color: @header-font-color;
     font-size: 4rem;
     margin-top: 1vh;
+    opacity: 1;
   }
 
   .navi {
